--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
 <h1 class=" text-white font-bold text-center text-4xl mb-5">
   StopWatch
 </h1>
-<h2 class="text-green-600 font-bold text-center text-5xl display-timer">00:00:00</h2>
+<h2 class="text-green-600 font-bold text-center text-5xl display-timer"></h2>
 <div class="btn-container flex justify-center items-center gap-5 mt-5
 
 " >
-  <div class="start-btn min-w-[50px] min-h-[50px] bg-white text-black flex justify-center items-center rounded-[50%] cursor-pointer hover:bg-green-500 hover:text-white ease-in duration-150 ">
+  <button class="start-btn min-w-[50px] min-h-[50px] bg-white text-black flex justify-center items-center rounded-[50%] cursor-pointer hover:bg-green-500 hover:text-white ease-in duration-150 ">
     <i class="fa-solid fa-play"></i>
-  </div>
-   <div class="pause-btn min-w-[50px] min-h-[50px] bg-white text-black flex justify-center items-center rounded-[50%] cursor-pointer hover:bg-green-500 hover:text-white ease-in duration-150 ">
+  </button>
+   <button class="pause-btn min-w-[50px] min-h-[50px] bg-white text-black flex justify-center items-center rounded-[50%] cursor-pointer hover:bg-green-500 hover:text-white ease-in duration-150 ">
 <i class="fa-solid fa-pause"></i>
-  </div>
-  <div class="reset-btn min-w-[50px] min-h-[50px] bg-white text-black flex justify-center items-center rounded-[50%] cursor-pointer hover:bg-green-500 hover:text-white ease-in duration-150 ">
+  </button>
+  <button class="reset-btn min-w-[50px] min-h-[50px] bg-white text-black flex justify-center items-center rounded-[50%] cursor-pointer hover:bg-green-500 hover:text-white ease-in duration-150 ">
     <i class="fa-solid fa-rotate-right"></i>
-  </div>
+  </button>
 </div>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
@@ -47,7 +47,18 @@
       displayTimer.innerHTML = `${formatTime(minutes)}:${formatTime(seconds)}:${formatTime(milliseconds)}`;
     };
 
+ const styleBtnFun=(istrue,gray,white, btn)=>{
+  btn.disabled=istrue;
+  btn.style.cssText=`
+  background-color:${gray};
+  color:${white};
+    `
+}
     const startTimer = () => {
+   styleBtnFun(true,'gray','white',startBtn);
+   styleBtnFun(false,'white','black',pauseBtn);
+styleBtnFun(false,'white','black',resetBtn);
+          pauseBtn.disabled=false;
       if (clearId !== null) return;
       clearId = setInterval(() => {
         milliseconds++;
@@ -64,11 +75,18 @@
     };
 
     const pauseTimer = () => {
+      styleBtnFun(false,'white','black',startBtn);
+      styleBtnFun(true,'gray','white',pauseBtn);
+     styleBtnFun(false,'white','black',resetBtn);
       clearInterval(clearId);
+      console.log(clearId);
       clearId = null;
     };
 
     const resetTimer = () => {
+      styleBtnFun(false,'white','black',pauseBtn);
+      styleBtnFun(false,'white','black',startBtn);
+      styleBtnFun(true,'gray','white',resetBtn);
       clearInterval(clearId);
       clearId = null;
       milliseconds = 0;
