--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 <div class="btn-container flex justify-center items-center gap-5 mt-5
 
 " >
-  <button class="start-btn min-w-[50px] min-h-[50px] bg-white text-black flex justify-center items-center rounded-[50%] cursor-pointer hover:bg-green-500 hover:text-white ease-in duration-150 ">
+  <button class="start-btn min-w-[50px] min-h-[50px] bg-white text-black flex justify-center items-center rounded-[50%] cursor-pointer   ease-in duration-150 hover:opacity-[0.9] ">
     <i class="fa-solid fa-play"></i>
   </button>
-   <button class="pause-btn min-w-[50px] min-h-[50px] bg-white text-black flex justify-center items-center rounded-[50%] cursor-pointer hover:bg-green-500 hover:text-white ease-in duration-150 ">
+   <button class="pause-btn min-w-[50px] min-h-[50px] bg-white text-black flex justify-center items-center rounded-[50%] cursor-pointer  e ease-in duration-150  hover:opacity-[0.9] ">
 <i class="fa-solid fa-pause"></i>
   </button>
-  <button class="reset-btn min-w-[50px] min-h-[50px] bg-white text-black flex justify-center items-center rounded-[50%] cursor-pointer hover:bg-green-500 hover:text-white ease-in duration-150 ">
+  <button class="reset-btn min-w-[50px] min-h-[50px] bg-white text-black flex justify-center items-center rounded-[50%] cursor-pointer  hover:opacity-[0.9] ease-in duration-150 ">
     <i class="fa-solid fa-rotate-right"></i>
   </button>
 </div>
@@ -41,24 +41,21 @@
     let clearId = null;
 
     // Format with 2 digits (00)
-    const formatTime = (val) => val < 10 ? `0${val}` : val;
+ const formatTime = (val) => val < 10 ? `0${val}` : val;
 
     const updateDisplay = () => {
       displayTimer.innerHTML = `${formatTime(minutes)}:${formatTime(seconds)}:${formatTime(milliseconds)}`;
     };
 
- const styleBtnFun=(istrue,gray,white, btn)=>{
+ const styleBtnFun=(istrue, btn)=>{
   btn.disabled=istrue;
-  btn.style.cssText=`
-  background-color:${gray};
-  color:${white};
-    `
+ let styeling=istrue? btn.style.opacity='0.6' :  btn.style.opacity='1'
 }
     const startTimer = () => {
-   styleBtnFun(true,'gray','white',startBtn);
-   styleBtnFun(false,'white','black',pauseBtn);
-styleBtnFun(false,'white','black',resetBtn);
-          pauseBtn.disabled=false;
+   styleBtnFun(true,startBtn);
+   styleBtnFun(false,pauseBtn);
+
+
       if (clearId !== null) return;
       clearId = setInterval(() => {
         milliseconds++;
@@ -75,18 +72,16 @@ styleBtnFun(false,'white','black',resetBtn);
     };
 
     const pauseTimer = () => {
-      styleBtnFun(false,'white','black',startBtn);
-      styleBtnFun(true,'gray','white',pauseBtn);
-     styleBtnFun(false,'white','black',resetBtn);
+      styleBtnFun(false,startBtn);
+      styleBtnFun(true,pauseBtn);
+    //  styleBtnFun(false,'white','black',resetBtn);
       clearInterval(clearId);
-      console.log(clearId);
       clearId = null;
     };
 
     const resetTimer = () => {
-      styleBtnFun(false,'white','black',pauseBtn);
-      styleBtnFun(false,'white','black',startBtn);
-      styleBtnFun(true,'gray','white',resetBtn);
+      styleBtnFun(false,pauseBtn);
+      styleBtnFun(false,startBtn);
       clearInterval(clearId);
       clearId = null;
       milliseconds = 0;
